--- a/html/src/main/webapp/tp2/listerPizza.html
+++ b/html/src/main/webapp/tp2/listerPizza.html
@@ -9,7 +9,7 @@
 <div>
 		<h1>Gestion des pizzas</h1>
 
-		<a href="ajouterCommande.html">Ajout</a> /
+		<a href="ajouterPizza.html">Ajout</a> /
 		<a href="menu.html">Retour à l'accueil</a></br>
 		
 </div>
