--- a/html/src/main/webapp/tpJS/test7JSDOM.html
+++ b/html/src/main/webapp/tpJS/test7JSDOM.html
@@ -8,27 +8,30 @@
 	<div class="content">
 		<h1>TODO List</h1>
 		<ul id="todolist">
-			
+
 		</ul>
 		<input id="todotxt" type="text" />
 		<button id="addtodo" type="button" onClick="addElement();">Ajouter</button>
 	</div>
-	
-	<script type="text/javascript">
-	
-	function addElement(){
-		var element = document.getElementById("todolist");
-		var newElement = document.createElement("li");
-		newElement.addEventListener('click', suppElement);
-		var newText = document.createTextNode(document.getElementById("todotxt").value);
-		newElement.appendChild(newText);
-		element.appendChild(newElement);
-	}
-	
-	function suppElement(event){
-		document.getElementById("todolist").removeChild(event.currentTarget);
-	}
 
+	<script type="text/javascript">
+		function addElement() {
+			var element = document.getElementById("todolist");
+			var newElement = document.createElement("li");
+			newElement.addEventListener('click', suppElement);
+			var newText = document.createTextNode(document
+					.getElementById("todotxt").value);
+			newElement.appendChild(newText);
+			element.appendChild(newElement);
+		}
+
+		function suppElement(event) {
+			if (confirm()) {
+
+				document.getElementById("todolist").removeChild(
+						event.currentTarget);
+			}
+		}
 	</script>
 </body>
 </html>
